--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "openai": "^4.87.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
