--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@firebase/auth": "^1.9.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/axios": "^0.9.36",
     "@types/multer": "^1.4.12",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
     "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
