--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node index.ts",
+    "start": "node dist/index.js",
+    "prod": "cp .env.prd .env && node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "npx jest --runInBand",
     "test:watch": "npx jest --watch --runInBand"
