--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,6 +13,6 @@
     "moduleResolution": "node",
     "types": ["jest", "node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "client-dist"],
   "exclude": ["node_modules"]
 }
