changed user posts style

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["BPMCT", "Crossfit", "delt", "EXERCISEDB", "firebaseapp", "firebasestorage", "linkfit", "Mizrahi", "Natali", "rapidapi", "unliked", "unliking", "yelb"],
+  "cSpell.words": ["BPMCT", "checkmark", "Crossfit", "delt", "EXERCISEDB", "firebaseapp", "firebasestorage", "linkfit", "Mizrahi", "Natali", "rapidapi", "unliked", "unliking", "yelb"],
   "editor.fontSize": 16
 }
